--- a/velocidade.html
+++ b/velocidade.html
@@ -8,13 +8,19 @@
     <title>Verifica a Velocidade</title>
 </head>
 <body>
-    <img src="IMG" alt="">
+    <img src="img/exerc.jpg" alt="">
     <h1>Programa Verifica a Velocidade</h1>
     <form>
-    <p>Velocidade Permitida <input type="text" id="inPermitida" required></p>
-    <p>Velocidade do Condutor <input type="text" id="inCondutor" required></p>
+    <p>Velocidade Permitida 
+        <input type="text" id="inPermitida" required>
+    </p>
+    <p>Velocidade do Condutor 
+        <input type="text" id="inCondutor" required>
+    </p>
     <input type="Submit" value="Verificar Velocidade">
     </form>
+    <h3></h3>
+    <script src="velocidade.js"></script>
     
 
 </body>
